--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -1,8 +1,8 @@
 @article{martineau_survey_2017,
   title   = {A survey on image-based insect classification},
   author  = {Maxime
-             Martineau and Donatello Conte and Romain Raveaux and Ingrid Arnault and Damien
-             Munier and Gilles Venturini},
+             Martineau and Donatello Conte and Romain Raveaux and Ingrid Arnault
+             and Damien Munier and Gilles Venturini},
   journal = {Pattern Recognit.},
   year    = {2017},
   volume  = {65},
@@ -50,12 +50,12 @@
                  instead require specific methods for high quality image
                  acquisition.},
   language    = {en},
-  urldate     = {2021-09-14},
   author      = {Perrichot,
                  Vincent and Fisher, Brian},
   month       = sep,
   year        = {2012},
-  booktitle   = {{Digital Fossil International Conference}},
+  booktitle   = {{Digital Fossil
+                 International Conference}},
   hal_id      = {insu-00805243},
   hal_version = {v1}
 }
@@ -74,8 +74,7 @@
   volume   = {57},
   doi      = {10.1006/ciun.1993.1024},
   language = {en},
-  url      = {https://linkinghub.elsevier.com/retrieve/pii/S1049966083710247},
-  urldate  = {2021-09-02}
+  url      = {https://linkinghub.elsevier.com/retrieve/pii/S1049966083710247}
 }
 
 @inproceedings{boudra_plant_2018,
@@ -89,21 +88,26 @@
   note       = {ISSN: 1051-4651},
   pages      = {1530--1535},
   abstract   = {This paper presents a novel, yet compact texture
-                descriptor for plant species identification based on bark texture images.
-                Termed Statistical Macro Binary Pattern (SMBP), the descriptor is informative,
-                rotation invariant, and it is designed to encode texture information from a
-                large support area. The main novelty of this approach is the use of
-                statistical description to represent the intensity distribution in the large
-                support area, and an LBP-like encoding scheme to derive a statistical macro
-                pattern by thresholding it against its adaptive statistical prototype. We
-                propose to test three neighborhood sampling schemes according to the angular
-                quantization at each level of the macrostructure. The comprehensive
-                experiments on three challenging bark datasets (BarkTex, Trunk12, AFF) show
-                that our descriptor achieves high and more consistent identification rates
-                when compared with LBP-like texture descriptors.},
+                descriptor for plant species identification based on bark
+                texture images. Termed Statistical Macro Binary Pattern (SMBP),
+                the descriptor is informative, rotation invariant, and it is
+                designed to encode texture information from a large support
+                area. The main novelty of this approach is the use of
+                statistical description to represent the intensity distribution
+                in the large support area, and an LBP-like encoding scheme to
+                derive a statistical macro pattern by thresholding it against
+                its adaptive statistical prototype. We propose to test three
+                neighborhood sampling schemes according to the angular
+                quantization at each level of the macrostructure. The
+                comprehensive experiments on three challenging bark datasets
+                (BarkTex, Trunk12, AFF) show that our descriptor achieves high
+                and more consistent identification rates when compared with
+                LBP-like texture descriptors.},
   doi        = {10.1109/ICPR.2018.8545798},
-  keywords   = {Encoding, Prototypes, Quantization
-                (signal), Histograms, Image coding, Feature extraction, Image recognition},
+  keywords   = {Encoding, Prototypes,
+                Quantization
+                (signal), Histograms, Image coding, Feature extraction, Image
+                recognition},
   shorttitle = {Plant identification from bark}
 }
 
@@ -116,4 +120,192 @@
   year    = {2003},
   pages   = {357-367},
   volume  = {69}
+}
+
+@article{tihelka_evolution_2021,
+  title    = {The evolution of insect biodiversity},
+  journal  = {Current
+              Biology},
+  volume   = {31},
+  number   = {19},
+  pages    = {R1299-R1311},
+  year     = {2021},
+  issn     = {0960-9822},
+  doi      = {https://doi.org/10.1016/j.cub.2021.08.057},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0960982221011933},
+  author   = {Erik Tihelka and Chenyang Cai and Mattia Giacomelli and Jesus
+              Lozano-Fernandez and Omar Rota-Stabelli and Diying Huang and Michael S. Engel
+              and Philip C.J. Donoghue and Davide Pisani},
+  abstract = {Summary
+              Insects comprise over half of all described animal species.
+              Together with the Protura (coneheads), Collembola (springtails)
+              and Diplura (two-pronged bristletails), insects form the Hexapoda,
+              a terrestrial arthropod lineage characterised by possessing six
+              legs. Exponential growth of genome-scale data for the hexapods has
+              substantially altered our understanding of the origin and
+              evolution of insect biodiversity. Phylogenomics has provided a new
+              framework for reconstructing insect evolutionary history,
+              resolving their position among the arthropods and some
+              long-standing internal controversies such as the placement of the
+              termites, twisted-winged insects, lice and fleas. However, despite
+              the greatly increased size of phylogenomic datasets, contentious
+              relationships among key insect clades remain unresolved. Further
+              advances in insect phylogeny cannot rely on increased depth and
+              breadth of genome and taxon sequencing. Improved modelling of the
+              substitution process is fundamental to countering
+              tree-reconstruction artefacts, while gene content, modelling of
+              duplications and deletions, and comparative morphology all provide
+              complementary lines of evidence to test hypotheses emerging from
+              the analysis of sequence data. Finally, the integration of
+              molecular and morphological data is key to the incorporation of
+              fossil species within insect phylogeny. The emerging integrated
+              framework of insect evolution will help explain the origins of
+              insect megadiversity in terms of the evolution of their body plan,
+              species diversity and ecology. Future studies of insect phylogeny
+              should build upon an experimental, hypothesis-driven approach
+              where the robustness of hypotheses generated is tested against
+              increasingly realistic evolutionary models as well as
+              complementary sources of phylogenetic evidence.}
+}
+
+@book{gullan_insects_2009,
+  author     = {Gullan, P. J and Cranston, P. S},
+  publisher  = {Wiley},
+  title      = {Insects: an {Outline} of {Entomology}.},
+  year       = {2009},
+  address    = {Hoboken},
+  isbn       = {9781405144575},
+  note       = {OCLC: 1048427241},
+  abstract   = {TO ACCESS THE ARTWORK FROM THE BOOK, PLEASE VISIT
+                www.blackwellpublishing.com/gullan . This established and
+                popular textbook is the definitive guide to the study of
+                insects; a group of animals that represent over half of the
+                planet's biological diversity.
+                {\textless}li{\textgreater}Completely updated and expanded, this
+                new edition examines all aspects of insect biology including
+                anatomy and physiology, ecology and evolution of insects, insect
+                behaviours such as sociality, predation, parasitism and defense,
+                medical and veterinary entomology and methods of collection,
+                preserving and id.},
+  language   = {English},
+  shorttitle = {Insects},
+  url        = {http://qut.eblib.com.au/patron/FullRecord.aspx?p=233169}
+}
+
+
+@book{berenbaum_bugs_1996,
+  title      = {Bugs {In} {The} {System}: {Insects} {And} {Their} {Impact} {On}
+                {Human} {Affairs}},
+  isbn       = {9780465024452},
+  shorttitle = {Bugs {In}
+                {The} {System}},
+  abstract   = {An introduction to insect physiology, genetics
+                and behaviour which looks at the interaction between humans and insects, and
+                explores both the positive and negative aspects of the relationship.},
+  language   = {en},
+  publisher  = {Basic Books},
+  author     = {Berenbaum, May},
+  month      = jun,
+  year       = {1996},
+  keywords   = {Science / Life Sciences /
+                Zoology / Entomology, Nature / Animals / Insects \& Spiders}
+}
+
+
+@inproceedings{lim_performance_2017,
+  title     = {Performance effect analysis for insect classification using
+               convolutional neural network},
+  doi       = {10.1109/ICCSCE.2017.8284406},
+  abstract  = {It is necessary to develop an automated insect classification method in
+               order to create high added value of insects. Recently, image classification
+               work applying deep learning shows the best result of classification
+               performance. In this paper, we use convolutional neural network to classify
+               insects and examine the effect of the classification performance with the
+               varying number of kernels in the convolution layer and with the different
+               image datasets. Experiments were conducted on 27 insect classes of ImageNet
+               dataset with AlexNet. We confirmed that the classification performance of
+               neural network improves where insects are well represented at the center of
+               the image, and when the number of convolution kernels increases.},
+  booktitle = {2017 7th {IEEE} {International} {Conference} on {Control} {System},
+               {Computing} and {Engineering} ({ICCSCE})},
+  author    = {Lim, Suchang and Kim,
+               Seunghyun and Kim, Doyeon},
+  month     = nov,
+  year      = {2017},
+  keywords  = {Insects,
+               Feature extraction, Convolution, Kernel, Data mining, Convolutional neural
+               networks, Insect classification, Convolutional neural network, Convolution
+               layer, Convolution kernel},
+  pages     = {210--215}
+}
+
+@inproceedings{deng_imagenet_2009,
+  title      = {{ImageNet}: {A} large-scale hierarchical image database},
+  shorttitle = {{ImageNet}},
+  doi        = {10.1109/CVPR.2009.5206848},
+  abstract   = {The explosion of image data on the Internet has the potential to foster
+                more sophisticated and robust models and algorithms to index, retrieve,
+                organize and interact with images and multimedia data. But exactly how such
+                data can be harnessed and organized remains a critical problem. We introduce
+                here a new database called “ImageNet”, a large-scale ontology of images built
+                upon the backbone of the WordNet structure. ImageNet aims to populate the
+                majority of the 80,000 synsets of WordNet with an average of 500–1000 clean
+                and full resolution images. This will result in tens of millions of annotated
+                images organized by the semantic hierarchy of WordNet. This paper offers a
+                detailed analysis of ImageNet in its current state: 12 subtrees with 5247
+                synsets and 3.2 million images in total. We show that ImageNet is much larger
+                in scale and diversity and much more accurate than the current image datasets.
+                Constructing such a large-scale database is a challenging task. We describe
+                the data collection scheme with Amazon Mechanical Turk. Lastly, we illustrate
+                the usefulness of ImageNet through three simple applications in object
+                recognition, image classification and automatic object clustering. We hope
+                that the scale, accuracy, diversity and hierarchical structure of ImageNet can
+                offer unparalleled opportunities to researchers in the computer vision
+                community and beyond.},
+  booktitle  = {2009 {IEEE} {Conference} on {Computer}
+                {Vision} and {Pattern} {Recognition}},
+  author     = {Deng, Jia and Dong, Wei
+                and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  month      = jun,
+  year       = {2009},
+  note       = {ISSN: 1063-6919},
+  keywords   = {Large-scale systems, Image databases, Explosions, Internet, Robustness,
+                Information retrieval, Image retrieval, Multimedia databases, Ontologies,
+                Spine},
+  pages      = {248--255}
+}
+
+@misc{imagenet_labels,
+  title      = {text: imagenet 1000 class idx to human readable labels},
+  shorttitle = {text: imagenet 1000 class idx to human readable labels},
+  url        = {https://gist.github.com/yrevar/942d3a0ac09ec9e5eb3a},
+  language   = {en},
+  journal    = {Gist},
+  author     = {Carlos Guestrin and Emily Fox}
+}
+
+
+@misc{glick_insect_2016,
+  title    = {Insect {Classification} {With} {Heirarchical} {Deep}
+              {Convolutional} {Neural} {Networks} {Convolutional} {Neural} {Networks} for
+              {Visual} {Recognition} ( {CS} 231 {N} )},
+  url      = {https://www.semanticscholar.org/paper/Insect-Classification-With-Heirarchical-Deep-Neural-Glick-Miller/bb8316bb841bf6667431bf755f6fe01ec013b8d5},
+  abstract = {Inspired by the success of recent work on HD-CNNs, the pipeline
+              for designing, training and testing a hierarchical architecture achieves
+              promising results considering the particularly messy nature of the data set.
+              Classification of insect species is is a particularly difficult challenge
+              because of the high degree of similarity of the appearance between distinct
+              species. Given the visual commonalities across different levels of taxonomic
+              hierarchies (i.e. class, order, family, etc.), insect classifcation provides
+              a unique opportunity to apply emerging techniques used in Hierarchical Deep
+              CNNs (HD-CNNs). Inspired by the success of recent work on HD-CNNs, our
+              pipeline for designing, training and testing a hierarchical architecture
+              achieves promising results considering the particularly messy nature of our
+              data set. Working with 217,657 insect images from 277 unique classes, we
+              achieved a top-5 misclassification rate of 22.54\% and a top-10
+              misclassification rate of},
+  language = {en},
+  urldate  = {2022-04-26},
+  author   = {Glick, Jeffrey A. and Miller, K.},
+  year     = {2016}
 }
